# rust-compile-web

./: .gitignore  README.md
backend/src/: compiler.rs  main.rs
frontend/: package.json  vite.config.js
frontend/src/assets/: main.css
frontend/src/stores/: compiler.js
frontend/src/utils/: ast-parser.js
frontend/src/views/: ExploreView.vue  HomeView.vue
rust-compile-web/backend/: Cargo.toml
rust-compile-web/backend/examples/: demo.rs
rust-compile-web/backend/src/: api.rs
rust-compile-web/frontend/: index.html
rust-compile-web/frontend/src/: App.vue  main.js
rust-compile-web/frontend/src/api/: compiler.js
rust-compile-web/frontend/src/components/: AstTreeView.vue
rust-compile-web/frontend/src/router/: index.js
