[package]
name = "rust-compile-backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]

[dependencies]
actix-web = "4.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
tempfile = "3.0"
anyhow = "1.0"
rand = "0.8"
rustc_version = "0.4.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
